--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input
               type="text"
               id="search"
-              placeholder="Enter State name or Abbreviation"
+              placeholder="Enter City Name... "
               class="form-control form-control-lg"
             />
           </div>
