--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-md-6 m-auto">
           <h3 class="text-center mb-3">
-            <i class="fas fa-city"></i>City State Lookup
+            City State Lookup
           </h3>
           <div class="form-group">
             <input
